fix the main header content alignment

--- a/style.css
+++ b/style.css
@@ -28,10 +28,13 @@ header {
 }
 
 .main-header {
-    max-width: 1012px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.main-header_left {
+    width: 1012px;
 }
 
 a {
